# Kias-dorkonfigurator

./: .gitignore  CLAUDE.md  GUIDE_NY_DORTYPE.md  PLAN.md  build_installer.bat  kias_dorkonfigurator.spec  main.py  pyproject.toml  requirements.txt  transportmål.md
docs/: KIAS transportmål.xlsx  KIAS-produktreferanse.md  Kappelister_32_og_43_2025.md  Ordrelinjetekster-eksempel.md  Utrektninger.xlsx  kias-karmtyper-dokumentasjon.md  kvanne-dorblad-dokumentasjon.md  kvanne-dortyper-dokumentasjon.md
installer/: kias_installer.iss
scripts/: theme_preview.py
src/doors/: __init__.py  branndor.py  fjosdor.py  innerdor.py  kjoleromdor.py  pdi.py  pdpc.py  pdpo.py
src/export/: docx_ordretekst.py  excel_exporter.py  pdf_constants.py  pdf_exporter.py  pdf_kappeliste.py  pdf_title_block.py  pdf_utils.py
src/gui/: main_window.py
src/gui/karm_profiles/: __init__.py  base.py
src/gui/karm_profiles/fd/: fd1.py  fd2.py  fd3.py
src/gui/karm_profiles/kd/: kd1.py  kd2.py
src/gui/karm_profiles/pd/: __init__.py  pd1.py  pd2.py
src/gui/karm_profiles/sdi/: sd1.py  sd2.py  sd3id.py
src/gui/styles/: __init__.py  theme_manager.py
src/gui/widgets/: detail_tab.py  door_form.py  door_list_tab.py  door_preview_3d.py  graphics_settings.py  production_list_tab.py  production_tab.py
src/models/: door.py  door_list_io.py  production_list.py  project.py
src/utils/: calculations.py  constants.py  ordretekst.py
