[project]
name = "kias-dorkonfigurator"
version = "1.0.0"  # Hold synkronisert med VERSION-filen
description = "Dørkonfigurator for Kvanne Industrier AS (KIAS)"
requires-python = ">=3.10"
dependencies = [
    "jurigged>=0.6.1",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "pyopengl>=3.1.7",
    "pyqt6>=6.5.0",
    "pyqtgraph>=0.13.3",
    "python-docx>=1.2.0",
    "qt-material>=2.14",
    "qtawesome>=1.3.0",
    "reportlab>=4.0.0",
    "svglib>=1.5.0",
]

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.0",
    "python-docx>=1.2.0",
]
